--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "formversation-app",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "migrate": "tsx scripts/migrate-existing-forms.ts"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.10.0",
     "git": "^0.1.5",
     "next": "16.0.1",
     "react": "19.2.0",
@@ -24,6 +26,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
+    "tsx": "^4.19.0",
     "typescript": "^5"
   }
 }
