--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.34.1",
+    "@stripe/stripe-js": "^8.3.0",
     "@vercel/postgres": "^0.10.0",
     "dotenv": "^17.2.3",
     "git": "^0.1.5",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "stripe": "^19.2.1",
     "yaml": "^2.8.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -28,7 +29,8 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "tsx": "^4.19.0",
     "typescript": "^5"
   }
