--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "19.2.0",
     "resend": "^6.4.2",
     "stripe": "^19.2.1",
+    "svix": "^1.81.0",
     "yaml": "^2.8.1"
   },
   "devDependencies": {
